# simple-manip-survey

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
analysis/inter_annotator_agreement/: disagreement_analyzer.py  iaa_analysis.py  iaa_analysis_archive.py  iaa_analysis_nltk.py  krippendorff_alpha_calculator.py  pyproject.toml
analysis/new_analysis_folder/: analytics_data.json  data_loader.py  firestore_analysis.py  pyproject.toml
analysis/predictive_modelling/: aggregate_zero_shot_results.py  bert_bilstm.py  fold_creator.py  pyproject.toml  results_table.tex  zero_shot_analysis.py
analysis/predictive_modelling/data/: distribution_stats.json  fold_mapping.json
analysis/predictive_modelling/data/CoT/: perplexity-r1-1776-cot.json
analysis/predictive_modelling/data/few_shot/: chatgpt-4o-latest-fs.json  claude-3.5-sonnet-few-shot.json  deepseek-chat-few-shot.json  gemini-2.0-flash-001-few-shot.json  llama-3.1-405b-instruct-few-shot.json  llama-3.3-70b-instruct-fs.json  openai-o1-mini-cot-few-shot.json  perplexity-r1-1776-cot-few-shot.json
analysis/predictive_modelling/results/: claude-3.5-sonnet-few-shot_fs_evaluation.json  deepseek-chat-few-shot_fs_evaluation.json  deepseek-chat_evaluation.json  gemini-2.0-flash-001-few-shot_fs_evaluation.json  gemini-2.0-flash-001_zs_evaluation.json  llama-3.1-405b-instruct-few-shot_fs_evaluation.json  llama-3.1-405b-instruct_zs_evaluation.json  llama-3.2-3b-instruct_evaluation.json  llama-3.3-70b-instruct_evaluation.json  perplexity-r1-1776-cot-few-shot_fs_evaluation.json
(+42 files in other folders)
