[tool.poetry]
name = "inter-annotator-agreement"
version = "0.1.0"
description = ""
authors = ["Jack Contro <jack.contro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^6.8.0"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
